--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta property="og:title" content="LJS's 개인홈페이지">
     <meta name="description" content="안녕하세요. 웹퍼블리셔 이주성입니다.">
     <meta name="keywords" content="웹퍼블리셔, 웹디자인, 웹개발">
+    <meta  name="og:image"  content="https://www.daleseo.com/html-meta/thumbnail.png" />
     <title>LJS's 포트폴리오</title>
     <!-- 리셋 -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.css">
@@ -31,7 +32,9 @@
     <link rel="stylesheet" href="css/contact.css">
     <!-- 제이쿼리 연결 -->
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"type=text/javascript></script>
-    <script type="text/javascript"></script>
+    <script type="text/javascript">
+        
+    </script>
     <!-- 스크롤시 한페이지씩 이동 -->
     <script src="js/scroll.js"></script>
     <!-- 포트폴리오 -->
@@ -299,7 +302,7 @@
                 <div id="item01" class="port">
                     <div class="row">
                         <div class="description">
-                            <h1>삼성전자 홈페이지</h1>
+                            <h3>삼성전자 홈페이지</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus quis libero erat. Integer ac purus est. Proin erat mi, pulvinar ut magna eget, consectetur auctor turpis.</p>
                         </div>
                     </div> <!-- / row -->
@@ -308,7 +311,7 @@
                 <div id="item02" class="port">
                     <div class="row">
                         <div class="description">
-                            <h1>삼성전자 리뉴얼</h1>
+                            <h3>삼성전자 리뉴얼</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus quis libero erat. Integer ac purus est. Proin erat mi, pulvinar ut magna eget, consectetur auctor turpis.</p>
                         </div>
                         <img src="img/samsung-re.JPG" alt="">
@@ -318,7 +321,7 @@
                 <div id="item03" class="port">
                     <div class="row">
                         <div class="description">
-                            <h1>한국알콜산업</h1>
+                            <h3>한국알콜산업</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus quis libero erat. Integer ac purus est. Proin erat mi, pulvinar ut magna eget, consectetur auctor turpis.</p>
                         </div>
                     </div> <!-- / row -->
@@ -327,7 +330,7 @@
                 <div id="item04" class="port">
                     <div class="row">
                         <div class="description">
-                            <h1>제이쿼리&자바스크립트</h1>
+                            <h3>제이쿼리&자바스크립트</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus quis libero erat. Integer ac purus est. Proin erat mi, pulvinar ut magna eget, consectetur auctor turpis.</p>
                         </div>
                     </div> <!-- / row -->
@@ -336,7 +339,7 @@
                 <div id="item05" class="port">
                     <div class="row">
                         <div class="description">
-                            <h1>CGV</h1>
+                            <h3>CGV</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus quis libero erat. Integer ac purus est. Proin erat mi, pulvinar ut magna eget, consectetur auctor turpis.</p>
                         </div>
                     </div> <!-- / row -->
@@ -345,7 +348,7 @@
                 <div id="item06" class="port">
                     <div class="row">
                         <div class="description">
-                            <h1>에뛰드</h1>
+                            <h3>에뛰드</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus quis libero erat. Integer ac purus est. Proin erat mi, pulvinar ut magna eget, consectetur auctor turpis.</p>
                         </div>
                     </div> <!-- / row -->
@@ -354,7 +357,7 @@
                 <div id="item07" class="port">
                     <div class="row">
                         <div class="description">
-                            <h1>서울아산병원</h1>
+                            <h3>서울아산병원</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus quis libero erat. Integer ac purus est. Proin erat mi, pulvinar ut magna eget, consectetur auctor turpis.</p>
                         </div>
                     </div> <!-- / row -->
@@ -363,7 +366,7 @@
                 <div id="item08" class="port">
                     <div class="row">
                         <div class="description">
-                            <h1>하이트진로</h1>
+                            <h3>하이트진로</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus quis libero erat. Integer ac purus est. Proin erat mi, pulvinar ut magna eget, consectetur auctor turpis.</p>
                         </div>
                     </div> <!-- / row -->
@@ -372,7 +375,7 @@
                 <div id="item09" class="port">
                     <div class="row">
                         <div class="description">
-                            <h1>요거프레소</h1>
+                            <h3>요거프레소</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus quis libero erat. Integer ac purus est. Proin erat mi, pulvinar ut magna eget, consectetur auctor turpis.</p>
                         </div>
                     </div> <!-- / row -->
