--- a/index.html
+++ b/index.html
@@ -31,10 +31,7 @@
     <link rel="stylesheet" href="css/portfolio.css">
     <link rel="stylesheet" href="css/contact.css">
     <!-- 제이쿼리 연결 -->
-    <script src="https://code.jquery.com/jquery-3.7.0.min.js"type=text/javascript></script>
-    <script type="text/javascript">
-        
-    </script>
+    <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
     <!-- 스크롤시 한페이지씩 이동 -->
     <script src="js/scroll.js"></script>
     <!-- 포트폴리오 -->
