--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
     <script>
         $(document).ready(function(){
             AOS.init();
-            $("main section#business .wrap h2.h3").css("tr");
         });
     </script>
 </head>
@@ -89,7 +88,7 @@
     <main>
         <!-- ABOUT -->
         <section id="about" class="wh100"> 
-            <div class="wrap padding111">
+            <div class="wrap padding111" data-aos="zoom-in"data-aos-duration="3000">
                 <div class="note">
                     <h2 class="hide">ABOUT</h2>
                     <figure>
