--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
             <div class="subwrap">
                 <h1 class="h3"><a href="">LJ.S PORTFOLIO</a></h1>
                 <ul class="visit">
-                    <li><a href="">깃허브</a></li>
-                    <li><a href="">구글드라이브</a></li>
+                    <li><a href="https://github.com/Ggomabandal" target="_blank">깃허브</a></li>
+                    <li><a href="https://drive.google.com/drive/shared-with-me" target="_blank">구글드라이브</a></li>
                 </ul>
             </div>
         </div>
@@ -178,7 +178,7 @@
                             <h4>▶참여도</h4>
                             <p class="p">100%</p>
                             <span>▶기업 에띠드의 클론 홈페이지 입니다.<br/>▶웹페이지</span>
-                            <a href="" class="more">사이트 방문하기</a>
+                            <a href="https://ggomabandal.github.io/pf6/" target="_blank" class="more">사이트 방문하기</a>
                         </div>
                     </div>
                 </li>
@@ -194,7 +194,7 @@
                             <h4>▶참여도</h4>
                             <p class="p">100%</p>
                             <span>▶기업 cgv의 클론 홈페이지 입니다.<br/>▶웹페이지</span>
-                            <a href="" class="more">사이트 방문하기</a>
+                            <a href="https://ggomabandal.github.io/pf5/" target="_blank" class="more">사이트 방문하기</a>
                         </div>
                     </div>
                 </li>
@@ -210,7 +210,7 @@
                             <h4>▶참여도</h4>
                             <p class="p">100%</p>
                             <span>▶기업 요거프레소의 클론 홈페이지 입니다.<br/>▶웹페이지</span>
-                            <a href="" class="more">사이트 방문하기</a>
+                            <a href="https://ggomabandal.github.io/pf9/" target="_blank" class="more">사이트 방문하기</a>
                         </div>
                     </div>
                 </li>
@@ -226,7 +226,7 @@
                             <h4>▶참여도</h4>
                             <p class="p">100%</p>
                             <span>▶한국알콜산업의 클론 홈페이지 입니다.<br/>▶웹페이지,반응형 모바일홈페이지</span>
-                            <a href="" class="more">사이트 방문하기</a>
+                            <a href="https://ggomabandal.github.io/pf3/" target="_blank" class="more">사이트 방문하기</a>
                         </div>
                     </div>
                 </li>
@@ -242,7 +242,7 @@
                             <h4>▶참여도</h4>
                             <p class="p">100%</p>
                             <span>▶서울아산병원의 클론 홈페이지 입니다.<br/>▶웹페이지</span>
-                            <a href="" class="more">사이트 방문하기</a>
+                            <a href="https://ggomabandal.github.io/pf7/" target="_blank" class="more">사이트 방문하기</a>
                         </div>
                     </div>
                 </li>
@@ -258,7 +258,7 @@
                             <h4>▶참여도</h4>
                             <p class="p">100%</p>
                             <span>▶기업 하이트진로의 클론 홈페이지 입니다.<br/>▶웹페이지</span>
-                            <a href="" class="more">사이트 방문하기</a>
+                            <a href="https://ggomabandal.github.io/pf8/" target="_blank" class="more">사이트 방문하기</a>
                         </div>
                     </div>
                 </li>
@@ -274,7 +274,7 @@
                             <h4>▶참여도</h4>
                             <p class="p">100%</p>
                             <span>▶기업 삼성의 클론 홈페이지 입니다.<br/>▶웹페이지</span>
-                            <a href="" class="more">사이트 방문하기</a>
+                            <a href="https://ggomabandal.github.io/pf1/" target="_blank" class="more">사이트 방문하기</a>
                         </div>
                     </div>
                 </li>
@@ -290,7 +290,7 @@
                             <h4>▶참여도</h4>
                             <p class="p">100%</p>
                             <span>▶기업 삼성의 리뉴얼 홈페이지 입니다.<br/>▶웹페이지</span>
-                            <a href="" class="more">사이트 방문하기</a>
+                            <a href="https://ggomabandal.github.io/pf2/" target="_blank" class="more">사이트 방문하기</a>
                         </div>
                     </div>
                 </li>
