--- a/index.html
+++ b/index.html
@@ -107,17 +107,24 @@
                     </div>
                     <h4>경력</h4>
                     <ul class="career">
-                        <li>2023-06.09 ~ 2023.10.30 <span class="block">▶ [이젠아이티아카데미]UI/UX 웹디자인 강의 수료<br/>웹페이지</span></li>
-                        <li>2019-01.02 ~ 2020.11.30 <span class="block">▶ 유비케어 경영지원팀 근무<br/>웹페이지</span></li>
-                        <li>2011.02.25 ~ 2018.02.20 <span class="block">▶ 호서대학교 경제학과 졸업<br/>웹페이지</span></li>
+                        <li>2023-06.09 ~ 2023.10.30 <span class="block"></span>▶ [이젠아이티아카데미]UI/UX 웹디자인 강의 수료</li>
+                        <li>2019-01.02 ~ 2020.11.30 <span class="block"></span>▶ 유비케어 경영지원팀 근무</li>
+                        <li>2011.02.25 ~ 2018.02.20 <span class="block"></span>▶ 호서대학교 경제학과 졸업</li>
                     </ul>
                 </div>
-                <ul class="introduction">
-                    <li>안녕하세요?</li>
-                    <li>웹개발에 흥미를 가지고 새로이 도전을 하고있는 이주성 입니다.</li>
-                    <li>새로운 도전이기에 </li>
-                    <li></li>
-                </ul>
+                <span class="introduction">
+                    안녕하세요?
+                    <br/>
+                    웹개발에 대한 흥미로 코딩을 시작하게 된
+                    <br/>
+                    이주성 입니다.
+                    <br/>
+                    열심히 달려왔음에도 불구하고,
+                    <br/>
+                    아직 부족한 부분이 있음을 알기에,
+                    <br/>
+                    앞으로 발전하는 일만 남은 퍼블리셔 지망생 입니다.
+                </span>
             </div>
         </div>
     </section>
@@ -171,13 +178,13 @@
                     <div class="contents">
                         <img src="img/etude.JPG" alt="">
                         <div class="explane">
-                            <h4>▶사용 스킬</h4>
-                            <p class="p">HTML, CSS, SCSS, Javascript, Jquery</p>
-                            <h4>▶페이지</h4>
-                            <p class="p">index page</p>
-                            <h4>▶참여도</h4>
-                            <p class="p">100%</p>
-                            <span>▶기업 에띠드의 클론 홈페이지 입니다.<br/>▶웹페이지</span>
+                            <h4>▶ 사용 스킬</h4>
+                            <p class="p">- HTML, CSS, SCSS, Javascript, Jquery</p>
+                            <h4>▶ 페이지</h4>
+                            <p class="p">- index page</p>
+                            <h4>▶ 참여도</h4>
+                            <p class="p">- 100%</p>
+                            <span>▶ 에띠드의 클론 홈페이지 입니다.<br/>▶ 웹페이지</span>
                             <a href="https://ggomabandal.github.io/pf6/" target="_blank" class="more">사이트 방문하기</a>
                         </div>
                     </div>
@@ -187,13 +194,13 @@
                     <div class="contents">
                         <img src="img/cgv.jpg" alt="">
                         <div class="explane">
-                            <h4>▶사용 스킬</h4>
-                            <p class="p">HTML, CSS, SCSS, Javascript, Jquery</p>
-                            <h4>▶페이지</h4>
-                            <p class="p">index page</p>
-                            <h4>▶참여도</h4>
-                            <p class="p">100%</p>
-                            <span>▶기업 cgv의 클론 홈페이지 입니다.<br/>▶웹페이지</span>
+                            <h4>▶ 사용 스킬</h4>
+                            <p class="p">- HTML, CSS, SCSS, Javascript, Jquery</p>
+                            <h4>▶ 페이지</h4>
+                            <p class="p">- index page</p>
+                            <h4>▶ 참여도</h4>
+                            <p class="p">- 100%</p>
+                            <span>▶ cgv의 클론 홈페이지 입니다.<br/>▶ 웹페이지</span>
                             <a href="https://ggomabandal.github.io/pf5/" target="_blank" class="more">사이트 방문하기</a>
                         </div>
                     </div>
@@ -203,13 +210,13 @@
                     <div class="contents">
                         <img src="img/yogerpresso.jpg" alt="">
                         <div class="explane">
-                            <h4>▶사용 스킬</h4>
-                            <p class="p">HTML, CSS, SCSS, Javascript, Jquery</p>
-                            <h4>▶페이지</h4>
-                            <p class="p">index page</p>
-                            <h4>▶참여도</h4>
-                            <p class="p">100%</p>
-                            <span>▶기업 요거프레소의 클론 홈페이지 입니다.<br/>▶웹페이지</span>
+                            <h4>▶ 사용 스킬</h4>
+                            <p class="p">- HTML, CSS, SCSS, Javascript, Jquery</p>
+                            <h4>▶ 페이지</h4>
+                            <p class="p">- index page</p>
+                            <h4>▶ 참여도</h4>
+                            <p class="p">- 100%</p>
+                            <span>▶ 요거프레소의 클론 홈페이지 입니다.<br/>▶ 웹페이지</span>
                             <a href="https://ggomabandal.github.io/pf9/" target="_blank" class="more">사이트 방문하기</a>
                         </div>
                     </div>
@@ -219,13 +226,13 @@
                     <div class="contents">
                         <img src="img/kai.jpg" alt="">
                         <div class="explane">
-                            <h4>▶사용 스킬</h4>
-                            <p class="p">HTML, CSS, SCSS, Javascript, Jquery</p>
-                            <h4>▶페이지</h4>
-                            <p class="p">index page</p>
-                            <h4>▶참여도</h4>
-                            <p class="p">100%</p>
-                            <span>▶한국알콜산업의 클론 홈페이지 입니다.<br/>▶웹페이지,반응형 모바일홈페이지</span>
+                            <h4>▶ 사용 스킬</h4>
+                            <p class="p">- HTML, CSS, SCSS, Javascript, Jquery</p>
+                            <h4>▶ 페이지</h4>
+                            <p class="p">- index page</p>
+                            <h4>▶ 참여도</h4>
+                            <p class="p">- 100%</p>
+                            <span>▶ 한국알콜산업의 클론 홈페이지 입니다.<br/>▶ 웹페이지,반응형 모바일홈페이지</span>
                             <a href="https://ggomabandal.github.io/pf3/" target="_blank" class="more">사이트 방문하기</a>
                         </div>
                     </div>
@@ -235,13 +242,13 @@
                     <div class="contents">
                         <img src="img/asan.jpg" alt="">
                         <div class="explane">
-                            <h4>▶사용 스킬</h4>
-                            <p class="p">HTML, CSS, SCSS, Javascript, Jquery</p>
-                            <h4>▶페이지</h4>
-                            <p class="p">index page</p>
-                            <h4>▶참여도</h4>
-                            <p class="p">100%</p>
-                            <span>▶서울아산병원의 클론 홈페이지 입니다.<br/>▶웹페이지</span>
+                            <h4>▶ 사용 스킬</h4>
+                            <p class="p">- HTML, CSS, SCSS, Javascript, Jquery</p>
+                            <h4>▶ 페이지</h4>
+                            <p class="p">- index page</p>
+                            <h4>▶ 참여도</h4>
+                            <p class="p">- 100%</p>
+                            <span>▶ 서울아산병원의 클론 홈페이지 입니다.<br/>▶ 웹페이지</span>
                             <a href="https://ggomabandal.github.io/pf7/" target="_blank" class="more">사이트 방문하기</a>
                         </div>
                     </div>
@@ -251,13 +258,13 @@
                     <div class="contents">
                         <img src="img/hite.jpg" alt="">
                         <div class="explane">
-                            <h4>▶사용 스킬</h4>
-                            <p class="p">HTML, CSS, SCSS, Javascript, Jquery</p>
-                            <h4>▶페이지</h4>
-                            <p class="p">index page</p>
-                            <h4>▶참여도</h4>
-                            <p class="p">100%</p>
-                            <span>▶기업 하이트진로의 클론 홈페이지 입니다.<br/>▶웹페이지</span>
+                            <h4>▶ 사용 스킬</h4>
+                            <p class="p">- HTML, CSS, SCSS, Javascript, Jquery</p>
+                            <h4>▶ 페이지</h4>
+                            <p class="p">- index page</p>
+                            <h4>▶ 참여도</h4>
+                            <p class="p">- 100%</p>
+                            <span>▶ 하이트진로의 클론 홈페이지 입니다.<br/>▶ 웹페이지</span>
                             <a href="https://ggomabandal.github.io/pf8/" target="_blank" class="more">사이트 방문하기</a>
                         </div>
                     </div>
@@ -267,13 +274,13 @@
                     <div class="contents">
                         <img src="img/samsung.jpg" alt="">
                         <div class="explane">
-                            <h4>▶사용 스킬</h4>
-                            <p class="p">HTML, CSS, SCSS, Javascript, Jquery</p>
-                            <h4>▶페이지</h4>
-                            <p class="p">index page</p>
-                            <h4>▶참여도</h4>
-                            <p class="p">100%</p>
-                            <span>▶기업 삼성의 클론 홈페이지 입니다.<br/>▶웹페이지</span>
+                            <h4>▶ 사용 스킬</h4>
+                            <p class="p">- HTML, CSS, SCSS, Javascript, Jquery</p>
+                            <h4>▶ 페이지</h4>
+                            <p class="p">- index page</p>
+                            <h4>▶ 참여도</h4>
+                            <p class="p">- 100%</p>
+                            <span>▶ 삼성의 클론 홈페이지 입니다.<br/>▶ 웹페이지</span>
                             <a href="https://ggomabandal.github.io/pf1/" target="_blank" class="more">사이트 방문하기</a>
                         </div>
                     </div>
@@ -283,13 +290,13 @@
                     <div class="contents">
                         <img src="img/samsung-re.jpg" alt="">
                         <div class="explane">
-                            <h4>▶사용 스킬</h4>
-                            <p class="p">HTML, CSS, SCSS, Javascript, Jquery</p>
-                            <h4>▶페이지</h4>
-                            <p class="p">index page</p>
-                            <h4>▶참여도</h4>
-                            <p class="p">100%</p>
-                            <span>▶기업 삼성의 리뉴얼 홈페이지 입니다.<br/>▶웹페이지</span>
+                            <h4>▶ 사용 스킬</h4>
+                            <p class="p">- HTML, CSS, SCSS, Javascript, Jquery</p>
+                            <h4>▶ 페이지</h4>
+                            <p class="p">- index page</p>
+                            <h4>▶ 참여도</h4>
+                            <p class="p">- 100%</p>
+                            <span>▶ 삼성의 리뉴얼 홈페이지 입니다.<br/>▶ 웹페이지</span>
                             <a href="https://ggomabandal.github.io/pf2/" target="_blank" class="more">사이트 방문하기</a>
                         </div>
                     </div>
@@ -298,8 +305,8 @@
         </div>
     </section>
     <!-- CONTACT -->
-    <section id="contact" class="wh100">
-        <div class="wrap padding111">
+    <section id="contact"">
+        <div class="wrap">
             <h2 class="h1">Thank You<span class="block"></span>For Watching</h2>
             <ul>
                 <li>
@@ -312,7 +319,7 @@
                     <p class="p"><span>kakao</span>dlwntjd1017</p>
                 </li>
             </ul>
-            <span>포부의 문구 한줄 넣기</span>
+            <span>준비과정을 거쳐 이제는 앞으로 도약하고자 합니다.<br/>끝까지 봐주셔서 감사합니다.</span>
         </div>
     </section>
 </body>
