--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <div class="note">
                 <h2 class="hide">ABOUT</h2>
                 <figure>
-                    <img src="https://via.placeholder.com/150" alt="">
+                    <img src="img/me.jpg" alt="">
                     <figcaption class="hide">내사진</figcaption>
                 </figure>
                 <div class="profile">
